--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
                 <div class="container">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
-	                        <p class="hero-cta"><a class="button button-primary button-shadow" href="#">Pricing and plans</a></p>
+	                        <h1 class="hero-title mt-0">An intuitive HTTP debugging proxy</h1>
+	                        <p class="hero-paragraph">Proxyman is a high-performance macOS app, which enables developers to view HTTP/HTTPS requests from apps and domains.</p>
+	                        <p class="hero-cta"><a class="button button-primary button-shadow" href="#">Download Proxyman (1.3.4)</a></p>
+                            <p class="hero-detail-OS">Requires macOS 10.12+.</p>
 						</div>
 						<div class="hero-illustration">
 							<div class="hero-shapes is-revealing">
@@ -140,8 +141,8 @@
                     <div class="features-extended-inner section-inner has-top-divider">
                         <div class="features-extended-header text-center">
                             <div class="container-sm">
-                                <h2 class="section-title mt-0">Meet Sienna</h2>
-                                <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+                                <h2 class="section-title mt-0">Native, High-Performance, Distraction-Free</h2>
+                                <p class="section-paragraph">Proxyman is a handy tool for developers to view HTTP/HTTPS requests and debug quickly without any distractions.</p>
                             </div>
                         </div>
                         <div class="feature-extended">
@@ -183,8 +184,8 @@
                                 </svg>
                             </div>
                             <div class="feature-extended-body">
-                                <h3 class="mt-0">Discover</h3>
-                                <p>In a professional context it often happens that private or corporate clients corder a publication to be made and presented with the actual content.</p>
+                                <h3 class="mt-0">Exclusively built for macOS</h3>
+                                <p>Proxyman is dedicatedly built as a native app.<br>By strictly following the <a href="https://developer.apple.com/design/human-interface-guidelines/macos/overview/themes/">macOS Human Interface Guideline</a> <b></b> at every bit, Proxyman is <b>intuitive</b> and <b>friendly</b> for all users.</p>
                             </div>
                         </div>
                         <div class="feature-extended">
@@ -230,8 +231,8 @@
                                 </svg>
                             </div>
                             <div class="feature-extended-body">
-                                <h3 class="mt-0">Discover</h3>
-                                <p>In a professional context it often happens that private or corporate clients corder a publication to be made and presented with the actual content.</p>
+                                <h3 class="mt-0">Sophisticated proxy core</h3>
+                                <p>Proxyman is entirely written in <b>Swift</b>, <b>C++</b> and designed to run uninterruptedly at high performance with minimum system resource consumption.<br><br>Proxyman optimizes RAM usage, battery life while maintaining the <b>stability</b> of your internet connection.</p>
                             </div>
                         </div>
                         <div class="feature-extended">
@@ -264,8 +265,8 @@
                                 </svg>
                             </div>
                             <div class="feature-extended-body">
-                                <h3 class="mt-0">Discover</h3>
-                                <p>In a professional context it often happens that private or corporate clients corder a publication to be made and presented with the actual content.</p>
+                                <h3 class="mt-0">Categorize like Finder</h3>
+                                <p>Organize your workflow by <b>drag</b>, <b>drop</b> and <b>pin</b> specific apps or domains. All other irrelevant ones will be completely <b>ignored</b>.<br><br>Proxyman will boost your productivity by reducing distraction.</p>
                             </div>
                         </div>
                     </div>
