--- a/index.html
+++ b/index.html
@@ -269,6 +269,87 @@
                                 <p>Organize your workflow by <b>drag</b>, <b>drop</b> and <b>pin</b> specific apps or domains. All other irrelevant ones will be completely <b>ignored</b>.<br><br>Proxyman will boost your productivity by reducing distraction.</p>
                             </div>
                         </div>
+                        <div class="feature-extended">
+                            <div class="feature-extended-image is-revealing">
+                                <svg width="480" height="320" viewBox="0 0 480 320" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <defs>
+                                        <path id="feature-2-a" d="M0 17h340v240H0z"/>
+                                        <path d="M104.361 69c5.222-9.45 8.194-20.1 8.194-31.66 0-36.45-19.827 0-56.278 0C19.827 37.34 0-25.017 0 11.434 0 29.047 2.36 50.913 8.91 69h95.451z" id="feature-2-b"/>
+                                        <linearGradient x1="50%" y1="0%" x2="4.666%" y2="38.561%" id="feature-2-c">
+                                            <stop stop-color="#FFE4A2" offset="0%"/>
+                                            <stop stop-color="#FFC570" offset="100%"/>
+                                        </linearGradient>
+                                        <path id="feature-2-f" d="M169.569 25.569h80v80h-80z"/>
+                                        <filter x="-500%" y="-500%" width="1000%" height="1000%" filterUnits="objectBoundingBox" id="dropshadow-f-2">
+                                            <feOffset dy="16" in="SourceAlpha" result="shadowOffsetOuter"/>
+                                            <feGaussianBlur stdDeviation="24" in="shadowOffsetOuter" result="shadowBlurOuter"/>
+                                            <feColorMatrix values="0 0 0 0 0.06 0 0 0 0 0.13 0 0 0 0 0.34 0 0 0 0.14 0" in="shadowBlurOuter"/>
+                                        </filter>
+                                    </defs>
+                                    <g fill="none" fill-rule="evenodd">
+                                        <path d="M456.32 303.547c88.366 0-106.453-64.428-106.453-152.793C349.867 62.388 380.366 0 292 0S2.043 62.388 2.043 150.754c0 88.365 365.912 152.793 454.277 152.793z" fill="#F4F7FE"/>
+                                        <g transform="translate(70 23)">
+                                            <use fill="#FFF" xlink:href="#feature-2-a" style="mix-blend-mode:multiply;filter:url(#dropshadow-f-2)"/>
+                                            <use fill="#FFF" xlink:href="#feature-2-a"/>
+                                            <path d="M31.625 123.62c33.137 0 18.98 85.493 18.98 52.356 0-33.137 100.43-91.442 67.293-91.442-20.35 0-77.099-9.132-117.898-8.503v47.317c10.468.547 21.558.272 31.625.272z" fill="#FFE5F1"/>
+                                            <g transform="translate(140 189)">
+                                                <mask id="feature-2-d" fill="#fff">
+                                                    <use xlink:href="#feature-2-b"/>
+                                                </mask>
+                                                <use fill="#FF6DB1" xlink:href="#feature-2-b"/>
+                                                <path d="M38 64C2.71 64-26 35.29-26 0S2.71-64 38-64v4C4.916-60-22-33.084-22 0S4.916 60 38 60 98 33.084 98 0h4c0 35.29-28.71 64-64 64zm0-20C13.738 44-6 24.262-6 0s19.738-44 44-44v4C15.944-40-2-22.056-2 0s17.944 40 40 40S78 22.056 78 0h4c0 24.262-19.738 44-44 44zm0-20C24.767 24 14 13.234 14 0s10.767-24 24-24v4c-11.028 0-20 8.972-20 20s8.972 20 20 20 20-8.972 20-20h4c0 13.234-10.767 24-24 24z" fill="url(#feature-2-c)" mask="url(#feature-2-d)"/>
+                                            </g>
+                                            <g transform="rotate(45 209.569 65.569)">
+                                                <use fill="#000" filter="url(#feature-2-e)" xlink:href="#feature-2-f"/>
+                                                <use fill="#FFF" xlink:href="#feature-2-f" style="mix-blend-mode:multiply;filter:url(#dropshadow-f-2)"/>
+                                                <use fill="#FFF" xlink:href="#feature-2-f"/>
+                                            </g>
+                                            <path fill="#6A72E4" d="M154.307 0l-32.023 5.12L98.602 29.28 92 61.86l7.24 32.212 24.385 22.215 31.416 9.954 33.082-7.08 21.539-25.772 11.769-32.35-6.125.919-9.676 29.102-20.67 22.63-29.919 6.482-29.196-7.732-21.477-21.331-9.361-29.25 7.244-30.474 23.175-20.831L154.419.165z"/>
+                                            <path fill="#A3A9F1" d="M155.041 107.506l-32.137-13.509-10.217-32.136 11.426-30.928 30.857-12.855.048 3.718-27.333 12.71-11.828 27.355 11.467 27.717 27.717 11.155 29.33-9.54 10.83-29.274 2.194.484-11.986 29.826z"/>
+                                            <path fill="#6A72E4" d="M155.041 85.403l-23.39-23.542 23.436-24.15-.298 3.456-20.48 20.694 20.732 20.874 19.406-21.089 3.877.432z"/>
+                                        </g>
+                                    </g>
+                                </svg>
+                            </div>
+                            <div class="feature-extended-body">
+                                <h3 class="mt-0">SSL Proxying</h3>
+                                <p>Proxyman can be used as a man-in-the-middle that logs all <b>HTTP/HTTPS</b> traffic between your applications and SSL Web Server.<br><br>Proxyman will dynamically generate certificates on-the-fly, whichenables developers to see HTTPS in plain text.</p>
+                            </div>
+                        </div>
+                        <div class="feature-extended">
+                            <div class="feature-extended-image is-revealing">
+                                <svg width="480" height="320" viewBox="0 0 480 320" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                    <defs>
+                                        <path id="features-3-a" d="M0 0h320v240H0z"/>
+                                        <filter x="-500%" y="-500%" width="1000%" height="1000%" filterUnits="objectBoundingBox" id="dropshadow-f-3">
+                                            <feOffset dy="16" in="SourceAlpha" result="shadowOffsetOuter"/>
+                                            <feGaussianBlur stdDeviation="24" in="shadowOffsetOuter" result="shadowBlurOuter"/>
+                                            <feColorMatrix values="0 0 0 0 0.06 0 0 0 0 0.13 0 0 0 0 0.34 0 0 0 0.14 0" in="shadowBlurOuter"/>
+                                        </filter>
+                                    </defs>
+                                    <g fill="none" fill-rule="evenodd">
+                                        <g fill="#F4F7FE">
+                                            <path d="M465.727 112.934c33.137 0-5.727-64.359-5.727-97.496s-20.974-2.617-54.111-2.617S340-17.699 340 15.438s92.59 97.496 125.727 97.496zM454.277 319.202c88.366 0-106.453-64.427-106.453-152.793S0 41.866 0 166.409s365.912 152.793 454.277 152.793z"/>
+                                        </g>
+                                        <g transform="translate(80 40)">
+                                            <use fill="#FFF" xlink:href="#features-3-a" style="mix-blend-mode:multiply;filter:url(#dropshadow-f-2)"/>
+                                            <use fill="#FFF" xlink:href="#features-3-a"/>
+                                            <path d="M131.594 185.875c33.137 0-88.594-28.109-88.594-61.246 0-22.23-19.932-41.805-43-52.281v75.216c33.425 22.264 106.39 38.311 131.594 38.311z" fill="#FFF6E7"/>
+                                            <path d="M320 62.182c-27.86.37-87.107 29.127-111.969 29.127-33.137 0 56.035 22.472 56.035 55.609 0 19.031 26.93 26.733 55.934 29.84V62.182z" fill="#FFC570"/>
+                                        </g>
+                                        <path fill="#FFF" d="M216 24h80v80h-80z" style="mix-blend-mode:multiply;filter:url(#dropshadow-f-2)"/>
+                                        <path fill="#FFF" d="M216 24h80v80h-80z"/>
+                                        <path d="M267 85h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm12-60h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm12-60h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm12-60h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm12-60h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm12-60h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4zm0 12h4v4h-4v-4z" fill="#5FFAD0"/>
+                                        <path d="M126 197.156l23.039 15.424L173.495 225l23.756-13.614L223 198.298l-12.63-5.63 5.38 4.892-21.271 12.342-20.984 13.869-21.457-13.07-21.796-12.346 10.232-4.303L137.77 191 126 197.156zm82.883-5.15l1.486.662-1.087-.987-.399.325z" fill="#82DDFC"/>
+                                        <path fill="#0181F6" d="M206.966 215.77l8.251 3.372-21.268 11.975-20.62 13.946-20.588-14.002-20.915-12.222 6.688-4.057-1.038-1.43L124 220.1l25.242 13.641L173.329 249l23.105-16.848L221 219.166 209.293 213zM149.437 163.074L125 176.071l22.751 15.829 24.857 13.1 24.829-13.168L222 176.072l-24.713-15.532-24.68-11.54-23.17 14.074zm3.109 23.94l-21.518-10.943 21.488-11.009 20.092-12.469 20.238 12.238 23.199 11.24-21.69 13.775-21.747 11.489-20.062-14.32z"/>
+                                    </g>
+                                </svg>
+                            </div>
+                            <div class="feature-extended-body">
+                                <h3 class="mt-0">Comprehensive debug tools</h3>
+                                <p>Built-in tools include <b>Compose</b>, <b>Repeat</b>, <b>Export</b>.<br><br>Proxyman makes it much easier to catch, replicate bugs and share your work to teammates quickly.<br><br>Proxyman is integrated with <b>iOS simulators</b> and <b>iOS devices</b>.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -340,60 +421,7 @@
             <section class="pricing section">
                 <div class="container">
                     <div class="pricing-inner section-inner">
-                        <h2 class="section-title mt-0 text-center">Pricing</h2>
-                        <div class="pricing-tables-wrap">
-                            <div class="pricing-table is-revealing">
-                                <div class="pricing-table-inner">
-                                    <div class="pricing-table-main">
-                                        <div class="pricing-table-header">
-                                            <div class="pricing-table-title mt-12 mb-16">Monthly</div>
-                                            <div class="pricing-table-price pb-32"><span class="pricing-table-price-currency h3">$</span><span class="pricing-table-price-amount h1">29</span>/m</div>
-                                        </div>
-                                        <ul class="pricing-table-features list-reset text-xs">
-                                            <li>
-                                                <span>Lorem ipsum dolor sit consectetur</span>
-                                            </li>
-                                            <li>
-                                                <span>Lorem ipsum dolor sit consectetur</span>
-                                            </li>
-                                            <li>
-                                                <span>Lorem ipsum dolor sit consectetur</span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="pricing-table-cta">
-                                        <a class="button button-primary button-shadow button-block" href="#">Get started</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="pricing-table pricing-table-primary text-light is-revealing">
-                                <div class="pricing-table-inner">
-                                    <div class="pricing-table-main">
-                                        <div class="pricing-table-header">
-                                            <div class="pricing-table-title mt-12 mb-16">Yearly</div>
-                                            <div class="pricing-table-price pb-32"><span class="pricing-table-price-currency h3">$</span><span class="pricing-table-price-amount h1">19</span>/m</div>
-                                        </div>
-                                        <ul class="pricing-table-features list-reset text-xs">
-                                            <li>
-                                                <span>Lorem ipsum dolor sit consectetur</span>
-                                            </li>
-                                            <li>
-                                                <span>Lorem ipsum dolor sit consectetur</span>
-                                            </li>
-                                            <li>
-                                                <span>Lorem ipsum dolor sit consectetur</span>
-                                            </li>
-                                            <li>
-                                                <span>Lorem ipsum dolor sit consectetur</span>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="pricing-table-cta">
-                                        <a class="button button-shadow button-block" href="#">Get started</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <h2 class="section-title mt-0 text-center">FAQs</h2>
 						<div class="pricing-faqs container-sm">
 	                        <ul class="accordion">
 	                            <li>
@@ -470,7 +498,7 @@
                             <a href="#">About us</a>
                         </li>
                         <li>
-                            <a href="#">FAQ's</a>
+                            <a href="#">Privacy</a>
                         </li>
                         <li>
                             <a href="#">Support</a>
@@ -502,7 +530,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 Sienna, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2019 Proxyman, all rights reserved</div>
                 </div>
             </div>
         </footer>
