--- a/index.html
+++ b/index.html
@@ -354,70 +354,6 @@
                 </div>
             </section>
 
-			<section class="testimonials section">
-				<div class="container">
-					<div class="testimonials-inner section-inner">
-						<h2 class="section-title mt-0 text-center">Testimonials</h2>
-						<div class="testimonials-wrap">
-							<div class="testimonial text-center text-xs is-revealing">
-								<div class="testimonial-inner">
-									<div class="testimonial-main">
-										<div class="testimonial-header">
-											<img class="mb-16" src="dist/images/testimonial-01.png" alt="Testimonial">
-										</div>
-										<div class="testimonial-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-										</div>
-									</div>
-									<div class="testimonial-footer">
-										<div class="testimonial-name">Mark Simons</div>
-										<div class="testimonial-link">
-											<a href="#">company.com</a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="testimonial text-center text-xs is-revealing">
-								<div class="testimonial-inner">
-									<div class="testimonial-main">
-										<div class="testimonial-header">
-											<img class="mb-16" src="dist/images/testimonial-02.png" alt="Testimonial">
-										</div>
-										<div class="testimonial-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-										</div>
-									</div>
-									<div class="testimonial-footer">
-										<div class="testimonial-name">Emma Patrick</div>
-										<div class="testimonial-link">
-											<a href="#">fast.com</a>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="testimonial text-center text-xs is-revealing">
-								<div class="testimonial-inner">
-									<div class="testimonial-main">
-										<div class="testimonial-header">
-											<img class="mb-16" src="dist/images/testimonial-03.png" alt="Testimonial">
-										</div>
-										<div class="testimonial-body">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-										</div>
-									</div>
-									<div class="testimonial-footer">
-										<div class="testimonial-name">David Harris</div>
-										<div class="testimonial-link">
-											<a href="#">traction.com</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-
             <section class="pricing section">
                 <div class="container">
                     <div class="pricing-inner section-inner">
@@ -426,40 +362,58 @@
 	                        <ul class="accordion">
 	                            <li>
 	                                <div class="accordion-title">
-										<span>In a professional context it often happens that private?</span>
+										<span>What is the current progress of Proxyman?</span>
 										<div class="accordion-icon"></div>
 									</div>
 	                                <div class="accordion-body">
-	                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+	                                    <p>Proxyman is in <b>BETA</b> phase.<br><br>My team is dedicatedly working to bring new handy features as soon as possible.<br><br>We're aiming to release new features every two weeks until we achieve the stable stages. Don't forget to subscribe to get the update 👨‍💻</p>
 	                                </div>
 	                            </li>
+                                <li>
+                                    <div class="accordion-title">
+                                        <span>Where is sensitive data going?</span>
+                                        <div class="accordion-icon"></div>
+                                    </div>
+                                    <div class="accordion-body">
+                                        <p>All your sensitive request/response data won't be sent anywhere. What is in your machine is in your machine.<br><br>Proxyman only collects general diagnostics and crash logs to <a href="https://appcenter.ms">AppCenter</a>. All diagnostics data is collected anonymously, no personal information and cannot be used to identify you.<br><br>You can opt-out in Preferences -> Privacy Tab.</p>
+                                    </div>
+                                </li>
 								<li>
 									<div class="accordion-title">
-										<span>Lorem ipsum dolor sit amet, consectetur</span>
+										<span>Does Proxyman support remote devices and simulators?</span>
 										<div class="accordion-icon"></div>
 									</div>
 									<div class="accordion-body">
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Ut enim ad minim veniam semper. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 									</div>
 								</li>
+                                <li>
+                                    <div class="accordion-title">
+                                        <span>Is there any way to limit HTTPS proxy for specific app or domain?</span>
+                                        <div class="accordion-icon"></div>
+                                    </div>
+                                    <div class="accordion-body">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Ut enim ad minim veniam semper. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    </div>
+                                </li>
 								<li>
 									<div class="accordion-title">
-										<span>In a professional context it often happens that private?</span>
+										<span>How do I report the bug?</span>
 										<div class="accordion-icon"></div>
 									</div>
 									<div class="accordion-body">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+										<p>We appreciate your effort to report the bug if you find.<br><br>Please open the Issue ticket on <a href="https://github.com/ProxymanApp/Proxyman">Proxyman's Github</a>. We will answer asap.</p>
 									</div>
 								</li>
-								<li>
-									<div class="accordion-title">
-										<span>Lorem ipsum dolor sit amet, consectetur</span>
-										<div class="accordion-icon"></div>
-									</div>
-									<div class="accordion-body">
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Ut enim ad minim veniam semper. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-									</div>
-								</li>
+                                <li>
+                                    <div class="accordion-title">
+                                        <span>How can I contact the team?</span>
+                                        <div class="accordion-icon"></div>
+                                    </div>
+                                    <div class="accordion-body">
+                                        <p>You can find us at <a href="https://twitter.com/_nghiatran">Twitter</a>, <a href="https://github.com/ProxymanApp/Proxyman">Github</a>, <a href="https://gitter.im/Proxyman-app/community?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge">Gitter</a> or send me 💌 at <a href="mailto:nghia@proxyman.app">nghia@proxyman.app</a></p>
+                                    </div>
+                                </li>
 	                        </ul>
 						</div>
                     </div>
