--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                             <a href="#">About us</a>
                         </li>
                         <li>
-                            <a href="#">Privacy</a>
+                            <a href="/privacy.html">Privacy</a>
                         </li>
                         <li>
                             <a href="#">Support</a>
