--- a/index.html
+++ b/index.html
@@ -446,13 +446,13 @@
                     </div>
                     <ul class="footer-links list-reset">
                         <li>
-                            <a href="#">Contact</a>
-                        </li>
-                        <li>
                             <a href="#">About us</a>
                         </li>
                         <li>
                             <a href="/privacy.html">Privacy</a>
+                        </li>
+                        <li>
+                            <a href="/terms-of-use.html">Terms of Use</a>
                         </li>
                         <li>
                             <a href="#">Support</a>
