--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -57,90 +57,37 @@
                         <div class="features-extended-inner section-inner has-top-divider">
                             <div class="features-extended-header text-left">
                                 <div class="container-sm">
-                                    <h1>Privacy Policy</h1>
-                                    <p>Effective date: April 04, 2019</p>
-                                    <p>Proxyman Ltd ("us", "we", or "our") operates the <a href="https://proxyman.app">https://proxyman.app</a> website (hereinafter referred to as the "Service").</p>
-                                    <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
-                                    <p>We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, the terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, accessible from <a href="https://proxyman.app">https://proxyman.app</a></p>
-                                    <h2>Information Collection And Use</h2>
-                                    <p>We collect several different types of information for various purposes to provide and improve our Service to you.</p>
-                                    <h3>Types of Data Collected</h3>
-                                    <h4>Personal Data</h4>
-                                    <p>While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you ("Personal Data"). Personally identifiable information may include, but is not limited to:</p>
-                                    <ul>
-                                        <li>Email address</li><li>Cookies and Usage Data</li>
-                                    </ul>
-                                    <h4>Usage Data</h4>
-                                    <p>We may also collect information on how the Service is accessed and used ("Usage Data"). This Usage Data may include information such as your computer's Internet Protocol address (e.g. IP address), browser type, browser version, the pages of our Service that you visit, the time and date of your visit, the time spent on those pages, unique device identifiers and other diagnostic data.</p>
-                                    <h4>Tracking & Cookies Data</h4>
-                                    <p>We use cookies and similar tracking technologies to track the activity on our Service and hold certain information.</p>
-                                    <p>Cookies are files with small amount of data which may include an anonymous unique identifier. Cookies are sent to your browser from a website and stored on your device. Tracking technologies also used are beacons, tags, and scripts to collect and track information and to improve and analyze our Service.</p>
-                                    <p>You can instruct your browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept cookies, you may not be able to use some portions of our Service. You can learn more how to manage cookies in the <a href="https://privacypolicies.com/blog/how-to-delete-cookies/">Browser Cookies Guide</a>.</p>
-                                    <p>Examples of Cookies we use:</p>
-                                    <ul>
-                                        <li><strong>Session Cookies.</strong> We use Session Cookies to operate our Service.</li>
-                                        <li><strong>Preference Cookies.</strong> We use Preference Cookies to remember your preferences and various settings.</li>
-                                        <li><strong>Security Cookies.</strong> We use Security Cookies for security purposes.</li>
-                                    </ul>
-                                    <h2>Use of Data</h2>
-                                    
-                                    <p>Proxyman Ltd uses the collected data for various purposes:</p>
-                                    <ul>
-                                        <li>To provide and maintain the Service</li>
-                                        <li>To notify you about changes to our Service</li>
-                                        <li>To allow you to participate in interactive features of our Service when you choose to do so</li>
-                                        <li>To provide customer care and support</li>
-                                        <li>To provide analysis or valuable information so that we can improve the Service</li>
-                                        <li>To monitor the usage of the Service</li>
-                                        <li>To detect, prevent and address technical issues</li>
-                                    </ul>
-                                    <h2>Transfer Of Data</h2>
-                                    <p>Your information, including Personal Data, may be transferred to — and maintained on — computers located outside of your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from your jurisdiction.</p>
-                                    <p>If you are located outside Singapore and choose to provide information to us, please note that we transfer the data, including Personal Data, to Singapore and process it there.</p>
-                                    <p>Your consent to this Privacy Policy followed by your submission of such information represents your agreement to that transfer.</p>
-                                    <p>Proxyman Ltd will take all steps reasonably necessary to ensure that your data is treated securely and in accordance with this Privacy Policy and no transfer of your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of your data and other personal information.</p>
-                                    <h2>Disclosure Of Data</h2>
-                                    <h3>Legal Requirements</h3>
-                                    <p>Proxyman Ltd may disclose your Personal Data in the good faith belief that such action is necessary to:</p>
-                                    <ul>
-                                        <li>To comply with a legal obligation</li>
-                                        <li>To protect and defend the rights or property of Proxyman Ltd</li>
-                                        <li>To prevent or investigate possible wrongdoing in connection with the Service</li>
-                                        <li>To protect the personal safety of users of the Service or the public</li>
-                                        <li>To protect against legal liability</li>
-                                    </ul>
-                                    <h2>Security Of Data</h2>
-                                    <p>The security of your data is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Data, we cannot guarantee its absolute security.</p>
-                                    <h2>Service Providers</h2>
-                                    <p>We may employ third party companies and individuals to facilitate our Service ("Service Providers"), to provide the Service on our behalf, to perform Service-related services or to assist us in analyzing how our Service is used.</p>
-                                    <p>These third parties have access to your Personal Data only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</p>
-                                    <h3>Analytics</h3>
-                                    <p>We may use third-party Service Providers to monitor and analyze the use of our Service.</p>
-                                    <ul>
-                                        <li>
-                                            <p><strong>Google Analytics</strong></p>
-                                            <p>Google Analytics is a web analytics service offered by Google that tracks and reports website traffic. Google uses the data collected to track and monitor the use of our Service. This data is shared with other Google services. Google may use the collected data to contextualize and personalize the ads of its own advertising network.</p>
-                                            <p>You can opt-out of having made your activity on the Service available to Google Analytics by installing the Google Analytics opt-out browser add-on. The add-on prevents the Google Analytics JavaScript (ga.js, analytics.js, and dc.js) from sharing information with Google Analytics about visits activity.</p>                <p>For more information on the privacy practices of Google, please visit the Google Privacy & Terms web page: <a href="https://policies.google.com/privacy?hl=en">https://policies.google.com/privacy?hl=en</a></p>
+                                    <h2>Terms of Service</h2>
+                                    <h3>1. Terms</h3>
+                                    <p>By accessing the website at <a href="https://proxyman.app">https://proxyman.app</a>, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this website are protected by applicable copyright and trademark law.</p>
+                                    <h3>2. Use License</h3>
+                                    <ol type="a">
+                                        <li>Permission is granted to temporarily download one copy of the materials (information or software) on Proxyman Ltd's website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
+                                            <ol type="i">
+                                                <li>modify or copy the materials;</li>
+                                                <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
+                                                <li>attempt to decompile or reverse engineer any software contained on Proxyman Ltd's website;</li>
+                                                <li>remove any copyright or other proprietary notations from the materials; or</li>
+                                                <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
+                                            </ol>
                                         </li>
-                                        <li>
-                                            <p><strong>Visual Studio App Center</strong></p>
-                                            <p>Visual Studio App Center brings together multiple services commonly used by mobile developers into an integrated cloud solution. Developers use App Center to Build, Test, and Distribute applications. Once the app's deployed, developers monitor the status and usage of the app using the Analytics and Diagnostics services, and engage with users using the Push service.</p>
-                                            <p>For more information on the privacy practices of Visual Studio App Center, please visit the Visual Studio App Center Privacy & Terms web page: <a href="https://docs.microsoft.com/en-us/appcenter/gdpr/your-data">https://docs.microsoft.com/en-us/appcenter/gdpr/your-data</a></p>
-                                        </li>
-                                    </ul>
-                                    <h2>Links To Other Sites</h2>
-                                    <p>Our Service may contain links to other sites that are not operated by us. If you click on a third party link, you will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site you visit.</p>
-                                    <p>We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p>
-                                    <h2>Changes To This Privacy Policy</h2>
-                                    <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page.</p>
-                                    <p>We will let you know via email and/or a prominent notice on our Service, prior to the change becoming effective and update the "effective date" at the top of this Privacy Policy.</p>
-                                    <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
-                                    <h2>Contact Us</h2>
-                                    <p>If you have any questions about this Privacy Policy, please contact us:</p>
-                                    <ul>
-                                        <li>By email: nghia@proxyman.app</li>
-                                        
-                                    </ul>
+                                        <li>This license shall automatically terminate if you violate any of these restrictions and may be terminated by Proxyman Ltd at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</li>
+                                    </ol>
+                                    <h3>3. Disclaimer</h3>
+                                    <ol type="a">
+                                        <li>The materials on Proxyman Ltd's website are provided on an 'as is' basis. Proxyman Ltd makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</li>
+                                        <li>Further, Proxyman Ltd does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to this site.</li>
+                                    </ol>
+                                    <h3>4. Limitations</h3>
+                                    <p>In no event shall Proxyman Ltd or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use the materials on Proxyman Ltd's website, even if Proxyman Ltd or a Proxyman Ltd authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
+                                    <h3>5. Accuracy of materials</h3>
+                                    <p>The materials appearing on Proxyman Ltd's website could include technical, typographical, or photographic errors. Proxyman Ltd does not warrant that any of the materials on its website are accurate, complete or current. Proxyman Ltd may make changes to the materials contained on its website at any time without notice. However Proxyman Ltd does not make any commitment to update the materials.</p>
+                                    <h3>6. Links</h3>
+                                    <p>Proxyman Ltd has not reviewed all of the sites linked to its website and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by Proxyman Ltd of the site. Use of any such linked website is at the user's own risk.</p>
+                                    <h3>7. Modifications</h3>
+                                    <p>Proxyman Ltd may revise these terms of service for its website at any time without notice. By using this website you are agreeing to be bound by the then current version of these terms of service.</p>
+                                    <h3>8. Governing Law</h3>
+                                    <p>These terms and conditions are governed by and construed in accordance with the laws of Singapore and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location.</p>
                                 </div>
                             </div>
                         </div>
