--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	                        <h1 class="hero-title mt-0">An intuitive HTTP debugging proxy</h1>
 	                        <p class="hero-paragraph">Proxyman is a high-performance macOS app, which enables developers to view HTTP/HTTPS requests from apps and domains.</p>
 	                        <p class="hero-cta"><a class="button button-primary button-shadow" href="#">Download Proxyman (1.3.4)</a></p>
-                            <p class="hero-detail-OS">Requires macOS 10.12+.</p>
+                            <p class="hero-detail-OS">Requires macOS 10.12+. <a href="https://github.com/ProxymanApp/Proxyman">Github</a>, <a href="https://github.com/ProxymanApp/Proxyman/releases">Changelog</a></p>
 						</div>
 						<div class="hero-illustration">
 							<div class="hero-shapes is-revealing">
@@ -446,7 +446,7 @@
                     </div>
                     <ul class="footer-links list-reset">
                         <li>
-                            <a href="#">About us</a>
+                            <a href="/about-us.html">About us</a>
                         </li>
                         <li>
                             <a href="/privacy.html">Privacy</a>
@@ -455,7 +455,7 @@
                             <a href="/terms-of-use.html">Terms of Use</a>
                         </li>
                         <li>
-                            <a href="#">Support</a>
+                            <a href="/support.html">Support</a>
                         </li>
                     </ul>
                     <ul class="footer-social-links list-reset">
@@ -476,7 +476,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="mailto:nghia@proxyman.app">
                                 <span class="screen-reader-text">Email</span>
                                 <svg viewBox="0 0 24 24" width="16" height="16" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M5.564 2.703l3.45 3.734-2.434 4.798 5.14-.921 2.34 5.646L24 2.926 5.564 2.703zm-.636 8.088l.957-.787-1.234.39-.126-.18.51-.495-.669.27C1.813 10.979 0 13.455 0 16.35c0 1.951.822 3.705 2.133 4.947-.563-.99-.885-2.134-.885-3.355 0-2.865 1.809-5.415 4.315-6.42l.315-.766-.75.331-.211-.285.011-.011zm4.364-1.97L10.89 6l9.398-2.201L9.292 8.821z" fill="#FFF"/>
