--- a/index.html
+++ b/index.html
@@ -410,6 +410,20 @@
                     </div>
                 </div>
             </section>
+
+            <section class="pricing section">
+                <div class="container">
+                    <div class="pricing-title section">
+                        <h2 class="section-title mt-0 text-center">See Proxyman in action 🚀</h2>
+                        <div class="pricing-faqs container-sm text-center">
+                            <div class="section-title">
+                                <p class="hero-cta"><a class="button button-primary button-shadow" href="#">Download Proxyman (1.3.4)</a></p>
+                                <p class="hero-detail-OS">Requires macOS 10.12+. <a href="https://github.com/ProxymanApp/Proxyman">Github</a>, <a href="https://github.com/ProxymanApp/Proxyman/releases">Changelog</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
 
         <footer class="site-footer">
